@@ -1,1 +1,2 @@
 ocamltags
+*.elc
