@@ -55,7 +55,8 @@ Bug fixes:
 - PR#3679: Warning display problems
 - PR#3963: Graphics.wait_next_event in Win32 hangs if window closed
 - PR#4079: Queue.copy is now tail-recursive
-- PR#4502: ocamlbuild now reliably excludes the build-dir from hygiene check 
+- PR#4469: emacs mode: caml-set-compile-command is annoying with ocamlbuild
+- PR#4502: ocamlbuild now reliably excludes the build-dir from hygiene check
 - PR#4762: ?? is not used at all, but registered as a lexer token
 - PR#4887: input_char after close_in crashes ocaml (msvc runtime)
 - PR#4994: ocaml-mode doesn't work with xemacs21
